# AutoMemoryBench

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
amb/: __init__.py  __main__.py  cli.py
amb/benchmark/: ARCHITECTURE.md  README.md  __init__.py  artifact_contract.py  cli.py  query_difficulty.py
amb/benchmark/analysis/: README.md  __init__.py  external_correlation.py  external_protocol.py  external_scores.py  protocol_strength.py  report_analysis.py  statistics.py
amb/benchmark/evaluation/: README.md  __init__.py
amb/benchmark/generation/: README.md  __init__.py  generator.py  profiles.py  stress.py  summary.py  types.py
amb/benchmark/integrations/: README.md  __init__.py  alignment.py  base.py  config_validation.py  factory.py  langmem.py  letta.py  mem0.py  smoke_clients.py  sota_official.py  zep_graphiti.py
amb/benchmark/interfaces/: README.md  __init__.py  cli.py
amb/benchmark/leaderboard/: README.md  __init__.py  summary.py
amb/benchmark/metrics/: README.md  __init__.py  classification.py  compression.py  efficiency.py  evolution.py  retrieval.py  safety.py  task.py  task_judges.py  tool.py
amb/benchmark/quality/: README.md  __init__.py
amb/benchmark/release/: README.md  __init__.py
amb/benchmark/schemas/: README.md  __init__.py  io.py  models.py  state.py
amb/benchmark/security/: README.md  __init__.py  (+2 more)
amb/clients/: ARCHITECTURE.md  README.md  __init__.py
amb/lib/: __init__.py  cli_run.py  models.py  run.py  semantic_use.py  systems.py  validity.py
configs/: model_registry.json
configs/agent_systems/: autogen_t1_plus_scoring.json  crewai_t1_plus_scoring.json  echo_blackbox_smoke.json  langgraph_t1_plus_scoring.json  llamaindex_agent_t1_plus_scoring.json  openai_compatible_custom_agent_t1_plus_scoring.json
configs/real_system/: a_mem_agentic_memory_official.json  evermind_official.json  langmem_real.json  letta_real.json  lightmem_official.json  lightrag_official.json  mem0_official.json  memengine_official.json  meminsight_official.json  memoripy_official.json  memoryos_official.json  reme_official.json  simplemem_official.json  supermemory_official.json  synap_official.json  txtai_official.json  zep_cloud_official.json
data/sample/: manifest.json
docs/: DATA.md  INTEGRATION.md  METRICS.md  REPRODUCTION.md
examples/: my_memory_adapter.py
scripts/: download_data.py  prepare_data.py  reproduce_baselines.sh
(+151 files in other folders)
